fix search modal not covering navbar

--- a/frontend/bowtie/src/components/gamelist/GameSearchModal/GameSearchModal.scss
+++ b/frontend/bowtie/src/components/gamelist/GameSearchModal/GameSearchModal.scss
@@ -10,6 +10,7 @@
   padding-top: 2px;
   width: 600px;
   min-height: 65px;
+  max-height: 600px;
   left: 50%;
   margin-left: -250px;
   top: 20%;
@@ -131,7 +132,9 @@
   width: 100%;
   height: 100%;
   margin-left: -10px;
-  margin-top: -10px;
+  margin-top: -1000px;
+  padding: 1000px;
+  
 }
 
 @media only screen and (max-width: 500px) {
